--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "generate-docs": "node_modules/.bin/jsdoc -c jsdoc.json"
@@ -15,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "docdash": "^2.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
