--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "docdash": "^2.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsdoc": "^4.0.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
   }
